<resources>
    <string name="app_name">MisViajesApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="email">Email</string>
    <string name="pass">Contraseña</string>
    <string name="iniciar">Iniciar sesión</string>
    <string name="pregunta_registro">¿No tiene cuenta?</string>
    <string name="registre_aqui">Registrarse aquí</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="registrarse">Registrarse</string>
    <string name="title_activity_sesion">SesionActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>